Modificaciones en nosotros.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,9 +38,9 @@
 				<img src="media/grupo.jpg" alt="Grupo">	
 			</div>
 			<p class="nosotros__texto nosotros__texto--title mt30px mb10px">¿Quienes somos?</p>
-			<p class="nosotros__texto nosotros__texto--text mb30px fontColorWhite">Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Aliquam, possimus quos assumenda similique minima! Quisquam numquam nobis, corrupti officia necessitatibus illo. Eaque voluptatum eveniet quibusdam reprehenderit inventore molestias cum ullam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, voluptatem, eveniet. Sapiente, officiis iste eveniet magnam, earum modi. Voluptas neque, fuga sunt enim fugiat veritatis, necessitatibus illum architecto placeat eum.</p>
+			<p class="nosotros__texto nosotros__texto--text mb30px fontColorWhite">Somos un grupo de más de 50 amigos (aunque nos integran algunos familiares) apasionados por la cocina y la elaboración de cerveza que se esmeran día a día para mejorar la calidad de nuestros productos y brindarle a nuestros clientes más de lo que esperan.</p>
 			<p class="nosotros__texto nosotros__texto--title mb10px">Nuestra Historia</p>
-			<p class="nosotros__texto nosotros__texto--text mb30px fontColorWhite">Lorem ipsum dolor sit, amet, consectetur adipisicing elit. Quam totam, fugiat tempore adipisci perspiciatis sapiente veniam consequuntur veritatis optio odio, eaque quae corporis, quibusdam distinctio asperiores aperiam provident? Est, quaerat.	Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum iusto facilis voluptatum dicta nisi nobis veritatis itaque, recusandae maiores, maxime eveniet at molestias neque harum cumque sed! At, quasi.</p>
+			<p class="nosotros__texto nosotros__texto--text mb30px fontColorWhite">Acompañada de una calidad y un servicio excepcional, Burger Classic es una cervecería y hamburguesería fundada en 1978. Con más de 40 años de historia y experiencia, se convirtió en un refugio en cualquier momento del día y es un centro social, con comida que respeta los tiempos de cada estación y que sale al baile con las hamburguesas y cervezas más especiales de Capital.</p>
 		</div>
 	</main>
 	<footer id="footer">
