Responsive locales.html 3

--- a/locales.html
+++ b/locales.html
@@ -39,7 +39,7 @@
 					Núñez
 				</div>
 				<div class="direccionLocal locales__texto locales__texto--text">
-					<p>Arribeños 3486, CABA</p>
+					<p>Arribeños 3486</p>
 				</div>
 				<div class="mapsLocal locales__texto locales__texto--text">
 					<a href="https://goo.gl/maps/yvQGaJKV2yo35R6m7" target="_blank">Ver ubicación en Google Maps</a>
@@ -53,7 +53,7 @@
 					Palermo
 				</div>
 				<div class="direccionLocal locales__texto locales__texto--text">
-					<p>Av. Santa Fe 4280, Buenos Aires</p>
+					<p>Av. Santa Fe 4280</p>
 				</div>
 				<div class="mapsLocal locales__texto locales__texto--text">
 					<a href="https://goo.gl/maps/LvQmeCqhRFC2KFse9" target="_blank">Ver ubicación en Google Maps</a>
@@ -67,7 +67,7 @@
 					Caballito
 				</div>
 				<div class="direccionLocal locales__texto locales__texto--text">
-					<p>Av. Rivadavia 4893, Buenos Aires</p>
+					<p>Av. Rivadavia 4893</p>
 				</div>
 				<div class="mapsLocal locales__texto locales__texto--text">
 					<a href="https://goo.gl/maps/8EkTfU23jBBZs2sY7" target="_blank">Ver ubicación en Google Maps</a>
