--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</div>
 	</main>
 	<footer id="footer">
-		<div>
+		<div class="footerButtons">
 			<ul class="fontColorWhite">
 				<li><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
