--- a/preguntas_frecuentes.html
+++ b/preguntas_frecuentes.html
@@ -85,7 +85,7 @@
 	</main>
 
 	<footer id="footer">
-		<div>
+		<div class="footerButtons">
 			<ul class="fontColorWhite">
 				<li><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
