--- a/preguntas_frecuentes.html
+++ b/preguntas_frecuentes.html
@@ -35,17 +35,16 @@
 	<main id="main" class="bgColorYellow">
 		<div class="contenedor">
 			<p class="titulo typeCabin textshadow">Preguntas Frecuentes</p>
-			<div class="accordion" id="accordionExample">
+			<div class="accordion mt30px" id="accordionExample">
 			  <div class="card">
 			    <div class="card-header" id="headingOne">
 			      <h2 class="mb-0">
-			        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
 			          ¿En qué horario podemos comer o cenar en el restaurante?
 			        </button>
 			      </h2>
 			    </div>
-
-			    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+				<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 			      <div class="card-body">
 			        <p>Lunes a Jueves: 16:00hs a 00:00hs.</p>
 					<p>Viernes a Domingo: 18:00hs a 02:00hs.</p>
