--- a/menu_acomp.html
+++ b/menu_acomp.html
@@ -35,21 +35,20 @@
 		<div class="contenedor">
 			<p class="titulo typeCabin textshadow">Menú</p>
 			<div class="seleccionMenuGrid">
-				<a href=""><div>Hamburguesas</div></a>
-				<a href=""><div>Acompañamientos</div></a>
-				<a href=""><div>Bebidas no Alcohólicas</div></a>
-				<a href=""><div>Cervezas</div></a>
-				<a href=""><div>Tragos</div></a>
+				<a href="menu.html"><div>Hamburguesas</div></a>
+				<a href="menu_acomp.html"><div>Acompañamientos</div></a>
+				<a href="menu_beb.html"><div>Bebidas no Alcohólicas</div></a>
+				<a href="menu_tragos.html"><div>Tragos</div></a>
 			</div>
 			<div class="menuGrid">
 				<div class="burger__img burger__img--burger1"></div>
-				<div class=".burger__nombre .burger__nombre--nombre1">Hamburguesa con Cheddar</div>
+				<div class=".burger__nombre .burger__nombre--nombre1">Hamburguesa Común con Cheddar</div>
 				<div class="burger__img burger__img--burger2"></div>
 				<div class=".burger__nombre .burger__nombre--nombre2">Hamburguesa Americana</div>
 				<div class="burger__img burger__img--burger3"></div>
 				<div class=".burger__nombre .burger__nombre--nombre3">Hamburguesa con Jamón</div>
 				<div class="burger__img burger__img--burger4"></div>
-				<div class=".burger__nombre .burger__nombre--nombre4">Hamburgesa Bañada</div>
+				<div class=".burger__nombre .burger__nombre--nombre4">Hamburgesa Triple con Cheddar</div>
 				<div class="burger__img burger__img--burger5"></div>
 				<div class=".burger__nombre .burger__nombre--nombre5">Hamburguesa Criolla</div>
 				<div class="burger__img burger__img--burger6"></div>
