menu.html Redesign 3

--- a/menu_acomp.html
+++ b/menu_acomp.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Menú del bar. Hamburguesas, cervezas, tragos, bebidas, y más.">	
-	<meta name="keywords" content="bar, restaurante, hamburguesas, comidas, cerveza, tragos, bebidas">
+	<meta name="keywords" content="bar, restaurante, papas, nuggets, entradas, acompañamientos">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Menú - Burger Classic</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -40,19 +40,15 @@
 				<a href="menu_beb.html"><div>Bebidas no Alcohólicas</div></a>
 				<a href="menu_tragos.html"><div>Tragos</div></a>
 			</div>
-			<div class="menuGrid">
-				<div class="burger__img burger__img--burger1"></div>
-				<div class=".burger__nombre .burger__nombre--nombre1">Hamburguesa Común con Cheddar</div>
-				<div class="burger__img burger__img--burger2"></div>
-				<div class=".burger__nombre .burger__nombre--nombre2">Hamburguesa Americana</div>
-				<div class="burger__img burger__img--burger3"></div>
-				<div class=".burger__nombre .burger__nombre--nombre3">Hamburguesa con Jamón</div>
-				<div class="burger__img burger__img--burger4"></div>
-				<div class=".burger__nombre .burger__nombre--nombre4">Hamburgesa Triple con Cheddar</div>
-				<div class="burger__img burger__img--burger5"></div>
-				<div class=".burger__nombre .burger__nombre--nombre5">Hamburguesa Criolla</div>
-				<div class="burger__img burger__img--burger6"></div>
-				<div class=".burger__nombre .burger__nombre--nombre6">Hamburguesa Veggie</div>
+			<div class="menuGrid10rows">
+				<div class="menu__img menu__img--acomp1"></div>
+				<div class="menu__nombre menu__nombre--acomp1">Papas Fritas</div>
+				<div class="menu__img menu__img--acomp2"></div>
+				<div class="menu__nombre menu__nombre--acomp2">Papas Fritas con Cheddar</div>
+				<div class="menu__img menu__img--acomp3"></div>
+				<div class="menu__nombre menu__nombre--acomp3">Aros de Cebolla</div>
+				<div class="menu__img menu__img--acomp4"></div>
+				<div class="menu__nombre menu__nombre--acomp4">Nuggets de Pollo</div>
 			</div>
 		</div>
 	</main>
