--- a/menu_beb.html
+++ b/menu_beb.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Menú del bar. Hamburguesas, cervezas, tragos, bebidas, y más.">	
-	<meta name="keywords" content="bar, restaurante, hamburguesas, comidas, cerveza, tragos, bebidas">
+	<meta name="keywords" content="bar, restaurante, bebidas">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Menú - Burger Classic</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -40,19 +40,19 @@
 				<a href="menu_beb.html"><div>Bebidas no Alcohólicas</div></a>
 				<a href="menu_tragos.html"><div>Tragos</div></a>
 			</div>
-			<div class="menuGrid">
-				<div class="burger__img burger__img--burger1"></div>
-				<div class=".burger__nombre .burger__nombre--nombre1">Hamburguesa Común con Cheddar</div>
-				<div class="burger__img burger__img--burger2"></div>
-				<div class=".burger__nombre .burger__nombre--nombre2">Hamburguesa Americana</div>
-				<div class="burger__img burger__img--burger3"></div>
-				<div class=".burger__nombre .burger__nombre--nombre3">Hamburguesa con Jamón</div>
-				<div class="burger__img burger__img--burger4"></div>
-				<div class=".burger__nombre .burger__nombre--nombre4">Hamburgesa Triple con Cheddar</div>
-				<div class="burger__img burger__img--burger5"></div>
-				<div class=".burger__nombre .burger__nombre--nombre5">Hamburguesa Criolla</div>
-				<div class="burger__img burger__img--burger6"></div>
-				<div class=".burger__nombre .burger__nombre--nombre6">Hamburguesa Veggie</div>
+			<div class="menuGrid15rows">
+				<div class="menu__img menu__img--bebida1"></div>
+				<div class="menu__nombre menu__nombre--bebida1">Pepsi</div>
+				<div class="menu__img menu__img--bebida2"></div>
+				<div class="menu__nombre menu__nombre--bebida2">Sprite</div>
+				<div class="menu__img menu__img--bebida3"></div>
+				<div class="menu__nombre menu__nombre--bebida3">Fanta</div>
+				<div class="menu__img menu__img--bebida4"></div>
+				<div class="menu__nombre menu__nombre--bebida4">Paso de los Toros</div>
+				<div class="menu__img menu__img--bebida5"></div>
+				<div class="menu__nombre menu__nombre--bebida5">Agua con gas</div>
+				<div class="menu__img menu__img--bebida6"></div>
+				<div class="menu__nombre menu__nombre--bebida6">Aquarius</div>
 			</div>
 		</div>
 	</main>
