menu.html Redesign 4

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</a>
 		    </div>
 		    <div class="carousel-item">
-		      <a href="">
+		      <a href="menu_cervezas.html">
 		      	<img src="media/beerCarousel.jpg" srcset="media/beerCarousel_mob.jpg 767w, media/beerCarousel.jpg" loading="lazy" class="d-block w-100" alt="Cervezas Carousel">
 		      </a>
 		    </div>
