--- a/menu_beb.html
+++ b/menu_beb.html
@@ -38,7 +38,7 @@
 				<a href="menu.html"><div>Hamburguesas</div></a>
 				<a href="menu_acomp.html"><div>Acompañamientos</div></a>
 				<a href="menu_beb.html"><div>Bebidas no Alcohólicas</div></a>
-				<a href="menu_tragos.html"><div>Tragos</div></a>
+				<a href="menu_cervezas.html"><div>Cervezas</div></a>
 			</div>
 			<div class="menuGrid15rows">
 				<div class="menu__img menu__img--bebida1"></div>
