--- a/menu_cervezas.html
+++ b/menu_cervezas.html
@@ -38,21 +38,21 @@
 				<a href="menu.html"><div>Hamburguesas</div></a>
 				<a href="menu_acomp.html"><div>Acompañamientos</div></a>
 				<a href="menu_beb.html"><div>Bebidas no Alcohólicas</div></a>
-				<a href="menu_tragos.html"><div>Tragos</div></a>
+				<a href="menu_cervezas.html"><div>Cervezas</div></a>
 			</div>
-			<div class="menuGrid">
-				<div class="burger__img burger__img--burger1"></div>
-				<div class=".burger__nombre .burger__nombre--nombre1">Hamburguesa Común con Cheddar</div>
-				<div class="burger__img burger__img--burger2"></div>
-				<div class=".burger__nombre .burger__nombre--nombre2">Hamburguesa Americana</div>
-				<div class="burger__img burger__img--burger3"></div>
-				<div class=".burger__nombre .burger__nombre--nombre3">Hamburguesa con Jamón</div>
-				<div class="burger__img burger__img--burger4"></div>
-				<div class=".burger__nombre .burger__nombre--nombre4">Hamburgesa Triple con Cheddar</div>
-				<div class="burger__img burger__img--burger5"></div>
-				<div class=".burger__nombre .burger__nombre--nombre5">Hamburguesa Criolla</div>
-				<div class="burger__img burger__img--burger6"></div>
-				<div class=".burger__nombre .burger__nombre--nombre6">Hamburguesa Veggie</div>
+			<div class="menuGrid15rows">
+				<div class="menu__img menu__img--beer1"></div>
+				<div class="menu__nombre menu__nombre--beer1">Honey</div>
+				<div class="menu__img menu__img--beer2"></div>
+				<div class="menu__nombre menu__nombre--beer2">Golden</div>
+				<div class="menu__img menu__img--beer3"></div>
+				<div class="menu__nombre menu__nombre--beer3">Indian Pale Ale (IPA)</div>
+				<div class="menu__img menu__img--beer4"></div>
+				<div class="menu__nombre menu__nombre--beer4">American Pale Ale (APA)</div>
+				<div class="menu__img menu__img--beer5"></div>
+				<div class="menu__nombre menu__nombre--beer5">Stout</div>
+				<div class="menu__img menu__img--beer6"></div>
+				<div class="menu__nombre menu__nombre--beer6">Red Irish</div>
 			</div>
 		</div>
 	</main>
